k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 585853585762.dkr.ecr.ap-south-1.amazonaws.com/3tier-app/backend:v1.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /api/tutorials
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
