k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 585853585762.dkr.ecr.ap-south-1.amazonaws.com/3tier-app/frontend:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
